--- a/src/variables.scss
+++ b/src/variables.scss
@@ -148,6 +148,10 @@ $midscreen-max-width: 1400px;
     --icon-fill-color: var(--grey-90);
     --background-cancel-icon: url(/search-cancel.svg) no-repeat center center;
 
+    --link-color: var(--blue-50);
+    --link-hover-color: var(--blue-60);
+    --link-active-color: var(--blue-70);
+    --link-external-icon: url(/open-in-new.svg);
 
     @media (prefers-color-scheme: dark) {
         --background-color: var(--grey-80);
@@ -172,5 +176,10 @@ $midscreen-max-width: 1400px;
         --secondary-icon-color: var(--grey-10-a60);
         --icon-fill-color: var(--grey-10);
         --background-cancel-icon: url(/search-cancel-light.svg) no-repeat center center;
+
+        --link-color: var(--blue-40);
+        --link-hover-color: var(--blue-50);
+        --link-active-color: var(--blue-60);
+        --link-external-icon: url(/open-in-new-light.svg);
     }
 }
